Fix background on mobile

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -54,7 +54,7 @@ $about-container-color:      $seventh-color;
   background: $background-overlay-color url("../img/img-noise-361x370.png") repeat;
   z-index: -5;
   width: 100%;
-  height: 100%;
+  height: 125%;
 }
 
 html, body {
